--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,49 +1,16 @@
-*{
-  box-sizing: border-box;
-  margin: 0;
+html,
+body {
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-.material-icons-outlined{
-  cursor: pointer;
-  user-select: none;
-}
-
-:root{
-  --topColor: #FFB700;
-  --secColor: #FFCF2D;
-  --butColor: #ff9100;
-  --inputWidth: 400px;
-  --paddingWidth: 121px;
-  --headerHeight: 60px;
-}
-
-body{
-  height: 100vh;
-}
-
-img{
-  width: 100%;
-}
-
-button{
-  cursor: pointer;
-}
-
-.grid{
-  position: relative;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 0px 25px;
-  grid-auto-flow: row;
-  padding: 0 50px;
-  width: 100%;
-}
-
-a{
-  cursor: pointer;
+a {
   color: inherit;
   text-decoration: none;
-  font-weight: 500;
+}
+
+* {
+  box-sizing: border-box;
 }
