--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -7,16 +7,17 @@
     background-color: rgba(255, 255, 255, 0.75)
 }
 .Overlay {
+    display: block;
     position: absolute;
-    top: 40px;
-    left: 40px;
-    right: 40px;
-    bottom: 40px;
+    top: 20%;
+    left: 20%;
+    right: 20%;
+    bottom: 20%;
     border: 1px solid #ccc;
-    background: #fff;
+    background: red;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
-    border-radius: 4px;
+    border-radius: 8px;
     outline: none;
     padding: 20px;
 }
