--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -55,3 +55,32 @@
   font-size: 16px;
   margin-left: 10px;
 }
+
+.grid{
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 0px 25px;
+    grid-auto-flow: row;
+    padding: 0 50px;
+    width: 100%;
+    height: 100%;
+}
+
+.sideBarLeft {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    position: relative;
+}
+
+.centerPost {
+    grid-column-start: 4;
+    grid-column-end: 10;
+    min-height: 100%;
+    position: relative;
+}
+
+.sideBarRight {
+    grid-column-start: 10;
+    grid-column-end: 13;
+}
