--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -21,4 +21,68 @@
     outline: none;
     padding: 20px;
 }
+.contentCenter {
+    background-color: #f9f9fa;
+    height: 100vh;
+    width: 100%;
+    padding-bottom: 20px;
+}
+
+.grid{
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 0px 25px;
+    grid-auto-flow: row;
+    padding: 0 50px;
+    width: 100%;
+    height: 100%;
+}
+
+.sideBarLeft {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    position: relative;
+}
+
+.centerPost {
+    grid-column-start: 4;
+    grid-column-end: 10;
+    min-height: 100%;
+    position: relative;
+}
+
+.sideBarRight {
+    grid-column-start: 10;
+    grid-column-end: 13;
+}
+
+.grid{
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 0 25px;
+    grid-auto-flow: row;
+    padding: 0 50px;
+    width: 100%;
+    height: 100%;
+}
+
+.sideBarLeft {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    position: relative;
+}
+
+.centerPost {
+    grid-column-start: 4;
+    grid-column-end: 10;
+    min-height: 100%;
+    position: relative;
+}
+
+.sideBarRight {
+    grid-column-start: 10;
+    grid-column-end: 13;
+}
 
