--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,7 @@ button{
   position: relative;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  gap: 0px 25px;
+  gap: 0 25px;
   grid-auto-flow: row;
   padding: 0 50px;
   width: 100%;
@@ -46,4 +46,11 @@ a{
   color: inherit;
   text-decoration: none;
   font-weight: 500;
+}
+
+.borderShadow {
+  background: #FFFFFF;
+  box-shadow: 0 0 25px -3px rgb(118 91 1);
+  border-radius: 16px;
+  overflow: hidden;
 }
