--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -25,7 +25,7 @@
     background-color: #f9f9fa;
     height: 100vh;
     width: 100%;
-    padding-bottom: 20px;
+    padding: 20px 0;
 }
 
 .grid{
