--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -1,11 +1,10 @@
-
 .overlay {
     position: fixed;
     top: 70px;
     left: 0;
     right: 0;
     bottom: 0;
-    backgroundColor: 'rgba(255, 255, 255, 0.75)'
+    background-color: 'rgba(255, 255, 255, 0.75)'
 }
 .content {
     position: absolute;
