--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,7 +50,7 @@ a{
 
 .borderShadow {
   background: #FFFFFF;
-  box-shadow: 0 0 25px -3px rgb(118 91 1);
+  box-shadow: 0px 0px 25px -3px rgba(118, 91, 1, 0.08);;
   border-radius: 16px;
   overflow: hidden;
 }
