--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -1,88 +1,24 @@
-.Modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(255, 255, 255, 0.75)
-}
-.Overlay {
-    display: block;
-    position: absolute;
-    top: 20%;
-    left: 20%;
-    right: 20%;
-    bottom: 20%;
-    border: 1px solid #ccc;
-    background: red;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    border-radius: 8px;
-    outline: none;
-    padding: 20px;
-}
-.contentCenter {
+.contentContainer {
     background-color: #f9f9fa;
     height: 100vh;
     width: 100%;
     padding: 20px 0;
 }
 
-.grid{
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 0px 25px;
-    grid-auto-flow: row;
-    padding: 0 50px;
-    width: 100%;
-    height: 100%;
-}
-
-.sideBarLeft {
+.menuBar {
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 3;
     position: relative;
+    height: 40vh;
 }
 
-.centerPost {
-    grid-column-start: 4;
+.postsSection {
+    grid-column-start: 3;
     grid-column-end: 10;
-    min-height: 100%;
     position: relative;
 }
 
-.sideBarRight {
+.buddyBar {
     grid-column-start: 10;
     grid-column-end: 13;
 }
-
-.grid{
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 0 25px;
-    grid-auto-flow: row;
-    padding: 0 50px;
-    width: 100%;
-    height: 100%;
-}
-
-.sideBarLeft {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    position: relative;
-}
-
-.centerPost {
-    grid-column-start: 4;
-    grid-column-end: 10;
-    min-height: 100%;
-    position: relative;
-}
-
-.sideBarRight {
-    grid-column-start: 10;
-    grid-column-end: 13;
-}
-
