--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -1,22 +1,24 @@
 .overlay {
     position: fixed;
-    top: 70px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: 'rgba(255, 255, 255, 0.75)'
+    top: 1%;
+    left: 1%;
+    right: 1%;
+    bottom: 1%;
+    z-index: 999;
+
 }
 .content {
     position: absolute;
-    top: 40px;
-    left: 40px;
-    right: 40px;
-    bottom: 40px;
+    top: 4%;
+    left: 4%;
+    right: 4%;
+    bottom: 4%;
     border: 1px solid #ccc;
     background: #fff;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     border-radius: 4px;
     outline: none;
-    padding: 20px
+    padding: 3%;
+    z-index: 999;
 }
