--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,18 +5,8 @@
   font-family: 'Roboto', sans-serif;
 }
 
-.material-icons-outlined{
-  cursor: pointer;
-  user-select: none;
-}
-
-:root{
-  --topColor: #FFB700;
-  --secColor: #FFCF2D;
-  --butColor: #ff9100;
-  --inputWidth: 400px;
-  --paddingWidth: 121px;
-  --headerHeight: 60px;
+html{
+  min-height: 100%;
 }
 
 body{
@@ -24,21 +14,11 @@ body{
 }
 
 img{
-  width: 100%;
+  width: 90%;
 }
 
 button{
   cursor: pointer;
-}
-
-.grid{
-  position: relative;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 0 25px;
-  grid-auto-flow: row;
-  padding: 0 50px;
-  width: 100%;
 }
 
 a{
@@ -48,9 +28,27 @@ a{
   font-weight: 500;
 }
 
+li{
+  list-style: none;
+}
+
+.material-icons-outlined{
+  cursor: pointer;
+  user-select: none;
+}
+
 .borderShadow {
   background: #FFFFFF;
-  box-shadow: 0px 0px 25px -3px rgba(118, 91, 1, 0.08);;
+  box-shadow: 0 0 25px -3px rgba(118, 91, 1, 0.08);;
   border-radius: 16px;
   overflow: hidden;
+}
+
+:root{
+  --topColor: #FFB700;
+  --secColor: #FFCF2D;
+  --butColor: #ff9100;
+  --inputWidth: 400px;
+  --paddingWidth: 121px;
+  --headerHeight: 60px;
 }
