--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -1,6 +1,6 @@
 .contentContainer {
     background-color: #f9f9fa;
-    height: 100vh;
+    min-height: 500%;
     width: 100%;
     padding: 20px 0;
 }
